--- a/Dessert-hemsida/Style.css
+++ b/Dessert-hemsida/Style.css
@@ -3,25 +3,7 @@
   margin: 0%;
 }
 
-.Namn {
-  height: 70px;
-  margin: 0px;
-  margin-left: 10px;
-  line-height: 70px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 40px;
-}
-.Inloggning {
-  height: 70px;
-  margin: 0px;
-  margin-right: 10px;
-  line-height: 70px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 40px;
-}
-header {
+.header {
   background-color: #c8afa3;
   margin-top: 40px;
   height: 70px;
@@ -34,14 +16,119 @@ body {
   background-color: #877071;
 }
 
-.Downboi {
-  margin-top: 30%;
-  align-items: baseline;
-  justify-content: space-between;
+
+.hej{
+  font-size: 40px;
 }
 
-.three-col-container {
-  display: grid;
-  place-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
+nav{
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space space-between;
+  align-items: center;
+}
+nav img{
+  width: 150px;
+}
+.nav-links{
+  flex: 1;
+  text-align: right;
+}
+.nav-links ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
+}
+.nav-links ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 23px;
+  font-family: 'Noto Sans Display', sans-serif;
+}
+.nav-links ul li ::after{
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #3c1e19;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+.nav-links ul li :hover::after{
+width: 100%;
+}
+
+.information-startsida{
+  width: 90%;
+  color: #fff;
+position: absolute;
+top: 33%;
+left: 20%;
+transform: translate(-50%,-33%);
+text-align: center;
+}
+
+.information-startsida h1{
+font-size: 50px;
+}
+
+.information-startsida p{
+  margin: 10px 0 40px;
+  color: white;
+}
+.about-us-knapp{
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 1px solid black;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.about-us-knapp:hover{
+  border: 1px solid white;
+  background: white;
+  transition: 1s;
+}
+@media (max-width: 700px){
+  .information-startsida h1{
+    font-size: 30px;
+  }
+  .nav-links ul li{
+    display: block;
+  }
+  .nav-links{
+    position: absolute;
+    background: #3c1e19;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: 0;
+    text-align: left;
+    z-index: 2;
+  }
+}
+
+/*info */
+
+.info{
+  width: 80%;
+  margin: auto;
+  text-align: left;
+  padding-top: 100px;
+}
+
+h1{
+  font-size: 40px;
+   font-weight: 600;
+}
+
+p{
+  font-size: 22px;
+font-weight: 300px;
+line-height: 22px;
+padding: 10px;
 }
