--- a/Dessert-hemsida/Style.css
+++ b/Dessert-hemsida/Style.css
@@ -3,51 +3,53 @@
   margin: 0%;
 }
 
+p {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
 .header {
   background-color: #c8afa3;
-  margin-top: 40px;
   height: 70px;
   display: flex;
   flex-flow: row;
   justify-content: space-between;
 }
 body {
-  margin: 0px;
-  background-color: #877071;
+  margin: 0%;
 }
 
-
-.hej{
+.hej {
   font-size: 40px;
 }
 
-nav{
+nav {
   display: flex;
   padding: 2% 6%;
   justify-content: space space-between;
   align-items: center;
 }
-nav img{
+nav img {
   width: 150px;
 }
-.nav-links{
+.nav-links {
   flex: 1;
   text-align: right;
 }
-.nav-links ul li{
+.nav-links ul li {
   list-style: none;
   display: inline-block;
   padding: 8px 12px;
   position: relative;
 }
-.nav-links ul li a{
+.nav-links ul li a {
   color: #fff;
   text-decoration: none;
   font-size: 23px;
-  font-family: 'Noto Sans Display', sans-serif;
+  font-family: "Noto Sans Display", sans-serif;
 }
-.nav-links ul li ::after{
-  content: '';
+.nav-links ul li ::after {
+  content: "";
   width: 0%;
   height: 2px;
   background: #3c1e19;
@@ -55,29 +57,29 @@ nav img{
   margin: auto;
   transition: 0.5s;
 }
-.nav-links ul li :hover::after{
-width: 100%;
+.nav-links ul li :hover::after {
+  width: 100%;
 }
 
-.information-startsida{
+.information-startsida {
   width: 90%;
-  color: #fff;
-position: absolute;
-top: 33%;
-left: 20%;
-transform: translate(-50%,-33%);
-text-align: center;
+  color: black;
+  position: absolute;
+  top: 33%;
+  left: 20%;
+  transform: translate(-50%, -33%);
+  text-align: center;
 }
 
-.information-startsida h1{
-font-size: 50px;
+.information-startsida h1 {
+  font-size: 50px;
 }
 
-.information-startsida p{
+.information-startsida p {
   margin: 10px 0 40px;
-  color: white;
+  color: black;
 }
-.about-us-knapp{
+.about-us-knapp {
   display: inline-block;
   text-decoration: none;
   color: black;
@@ -88,19 +90,19 @@ font-size: 50px;
   position: relative;
   cursor: pointer;
 }
-.about-us-knapp:hover{
+.about-us-knapp:hover {
   border: 1px solid white;
   background: white;
   transition: 1s;
 }
-@media (max-width: 700px){
-  .information-startsida h1{
+@media (max-width: 700px) {
+  .information-startsida h1 {
     font-size: 30px;
   }
-  .nav-links ul li{
+  .nav-links ul li {
     display: block;
   }
-  .nav-links{
+  .nav-links {
     position: absolute;
     background: #3c1e19;
     height: 100vh;
@@ -110,25 +112,4 @@ font-size: 50px;
     text-align: left;
     z-index: 2;
   }
-}
-
-/*info */
-
-.info{
-  width: 80%;
-  margin: auto;
-  text-align: left;
-  padding-top: 100px;
-}
-
-h1{
-  font-size: 40px;
-   font-weight: 600;
-}
-
-p{
-  font-size: 22px;
-font-weight: 300px;
-line-height: 22px;
-padding: 10px;
 }
