--- a/Dessert-hemsida/Style.css
+++ b/Dessert-hemsida/Style.css
@@ -111,3 +111,78 @@ nav {
   font-size: 20px;
   color: rgb(253, 1, 1);
 }
+
+.knapp-start{
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 12px 34px;
+  font-size: 24px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+
+.knapp-start:hover{
+  border: 1px solid green;
+  background: green;
+  transition: 1s;
+}
+
+.rad{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.Vad-erbjuder-vi{
+flex-basis: 31%;
+background: brown;
+border-radius: 10px;
+margin-bottom: 5%;
+padding: 20px 12px;
+box-sizing: border-box;
+}
+
+.erbjuder{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  color: black;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.Vad-erbjuder-vi:hover{
+  box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.5);
+}
+
+@media(max-width: 700px){
+  .rad{
+    flex-direction: column;
+  }
+}
+
+.Vart{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
+}
+.Vart-befinner-vi-oss{
+  
+}
