--- a/Dessert-hemsida/Style.css
+++ b/Dessert-hemsida/Style.css
@@ -14,13 +14,10 @@ p {
   display: flex;
   flex-flow: row;
   justify-content: space-between;
+  justify-content: right;
 }
 body {
   margin: 0%;
-}
-
-.hej {
-  font-size: 40px;
 }
 
 nav {
@@ -184,5 +181,58 @@ h3{
   padding-top: 50px;
 }
 .Vart-befinner-vi-oss{
-  
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
 }
+.Vart-befinner-vi-oss img{
+  width: 100%;
+  display: block;
+}
+.lager{
+  background: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+.lager:hover{
+  background:rgba(226, 0, 0, 0.7)
+}
+.lager h3{
+  width: 100%;
+  font-weight: 500;
+  color: white;
+  font-size: 30px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+.lager:hover h3{
+  bottom: 49%;
+  opacity: 1;
+}
+
+.Undrar{
+  margin: 100px auto;
+  width: 80%;
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(Nti.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+}
+.Undrar h1{
+  color: white;
+  margin-bottom: 40px;
+  padding: 0;
+}
+
