--- a/Dessert-hemsida/Style.css
+++ b/Dessert-hemsida/Style.css
@@ -112,7 +112,7 @@ nav {
   color: rgb(253, 1, 1);
 }
 
-.knapp-start{
+.knapp-start {
   display: inline-block;
   text-decoration: none;
   color: white;
@@ -124,37 +124,37 @@ nav {
   cursor: pointer;
 }
 
-.knapp-start:hover{
+.knapp-start:hover {
   border: 1px solid green;
   background: green;
   transition: 1s;
 }
 
-.rad{
+.rad {
   margin-top: 5%;
   display: flex;
   justify-content: space-between;
 }
-.Vad-erbjuder-vi{
-flex-basis: 31%;
-background: brown;
-border-radius: 10px;
-margin-bottom: 5%;
-padding: 20px 12px;
-box-sizing: border-box;
+.Vad-erbjuder-vi {
+  flex-basis: 31%;
+  background: brown;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
 }
 
-.erbjuder{
+.erbjuder {
   width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 100px;
 }
-h1{
+h1 {
   font-size: 36px;
   font-weight: 600;
 }
-p{
+p {
   color: black;
   font-size: 22px;
   font-weight: 300;
@@ -162,27 +162,31 @@ p{
   padding: 10px;
 }
 
-h3{
+h3 {
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
 }
-.Vad-erbjuder-vi:hover{
+.Vad-erbjuder-vi:hover {
   box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.5);
 }
 
-@media(max-width: 700px){
-  .rad{
+@media (max-width: 700px) {
+  .rad {
     flex-direction: column;
   }
 }
 
-.Vart{
+.Vart {
   width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 50px;
 }
-.Vart-befinner-vi-oss{
-  
+.Vart-befinner-vi-oss {
+  flex-basis: 32%;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
 }
