--- a/Dessert-hemsida/Style.css
+++ b/Dessert-hemsida/Style.css
@@ -37,7 +37,7 @@ nav {
   position: relative;
 }
 .nav-links ul li a {
-  color: #fff;
+  color: #834233;
   text-decoration: none;
   font-size: 23px;
   font-family: "Noto Sans Display", sans-serif;
@@ -45,7 +45,7 @@ nav {
 .nav-links ul li ::after {
   content: "";
   width: 0%;
-  height: 2px;
+  height: 3px;
   background: #3c1e19;
   display: block;
   margin: auto;
@@ -87,7 +87,7 @@ nav {
 
 .text-startsida {
   width: 90%;
-  color: white;
+  color: #b56e3d;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -108,8 +108,8 @@ nav {
 }
 .text-startsida p {
   margin: 20px 0 40px;
-  font-size: 25px;
-  color: rgb(8, 0, 0);
+  font-size: 30px;
+  color: white;
 }
 
 .knapp-start {
@@ -137,7 +137,7 @@ nav {
 }
 .Vad-erbjuder-vi {
   flex-basis: 31%;
-  background: #877071;
+  background: #91787a;
   border-radius: 10px;
   margin-bottom: 5%;
   padding: 20px 12px;
@@ -151,21 +151,22 @@ nav {
   padding-top: 100px;
 }
 h1 {
-  font-size: 36px;
+  font-size: 40px;
   font-weight: 600;
 }
 p {
   color: black;
-  font-size: 22px;
+  font-size: 25px;
   font-weight: 300;
   line-height: 22px;
   padding: 10px;
 }
 
 h3 {
+  font-size: 26px;
   text-align: center;
   font-weight: 600;
-  margin: 10px 0;
+  margin: 20px 0;
 }
 .Vad-erbjuder-vi:hover {
   box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.5);
@@ -226,8 +227,8 @@ h3 {
 .Undrar {
   margin: 100px auto;
   width: 80%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(Nti.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.425), rgba(0, 0, 0, 0.425)),
+    url(jan\ hus.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 10px;
@@ -235,7 +236,7 @@ h3 {
   padding: 100px 0;
 }
 .Undrar h1 {
-  color: white;
+  color: #c8afa3;
   margin-bottom: 40px;
   padding: 0;
 }
